# 5trat-core

./: .cirrus.yml  .dockerignore  .gitignore  CONTRIBUTING.md  COPYING  CREDITS.md  Dockerfile  Dockerfile.binary  Dockerfile.runtime-overlay  Dockerfile.test  INSTALL.md  Makefile.am  Makefile.in  NETWORK.md  README.md  SECURITY.md  build.sh  configure.ac  libbitcoinIIconsensus.pc.in  test_bch2_fork.sh  test_bch2_testnet.sh
doc/man/: Makefile.am  Makefile.in  bitcoinII-cli.1  bitcoinII-tx.1  bitcoinII-util.1  bitcoinII-wallet.1  bitcoinIId.1  bitcoincashII-qt.1
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bch2_fork.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoinII-chainstate.cpp  bitcoinII-cli-res.rc  bitcoinII-cli.cpp  bitcoinII-tx-res.rc  bitcoinII-tx.cpp  bitcoinII-util-res.rc  bitcoinII-util.cpp  bitcoinII-wallet-res.rc  bitcoinII-wallet.cpp  (+132 more)
src/algorithm/: algorithm.h  contains.h  erase_if.h  type_attributes.h
src/bench/: addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoinII.cpp  bip324_ecdh.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  descriptors.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  peer_eviction.cpp  poly1305.cpp  pool.cpp  prevector.cpp  readblock.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  streams_findbyte.cpp  strencodings.cpp  (+8 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  run_command.cpp  run_command.h  settings.cpp  settings.h  system.cpp  system.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/config/: bitcoinII-config.h.in
src/consensus/: abla.cpp  amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tokens.cpp  tokens.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/dsp/: dspid.h  dsproof.cpp  dsproof.h  dsproof_create.cpp  dsproof_validate.cpp  storage.cpp  storage.h  storage_cleanup.cpp
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoinII-node.cpp  bitcoinII-wallet.cpp  bitcoinIId.cpp  bitcoincashII-gui.cpp  bitcoincashII-qt.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: bitcoinIIkernel.cpp  blockmanager_opts.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_persist.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  validation_cache_sizes.h
src/logging/: timer.h
src/minisketch/: README.md
src/node/: abort.cpp  abort.h  blockmanager_args.cpp  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.cpp  coins_view_args.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.cpp  mempool_args.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  mini_miner.cpp  mini_miner.h  minisketchwrapper.cpp  minisketchwrapper.h  peerman_args.cpp  (+12 more)
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h  v3_policy.cpp  v3_policy.h
src/primitives/: block.cpp  block.h  blockhash.h  token.cpp  token.h  transaction.cpp  transaction.h  txid.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinII.cpp  bitcoinII.h  bitcoinII.qrc  bitcoinII_locale.qrc  bitcoinIIaddressvalidator.cpp  bitcoinIIaddressvalidator.h  bitcoinIIamountfield.cpp  bitcoinIIamountfield.h  bitcoinIIgui.cpp  bitcoinIIgui.h  bitcoinIIstrings.cpp  bitcoinIIunits.cpp  bitcoinIIunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.cpp  initexecutor.h  (+86 more)
src/rpc/: abc.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  dsproof.cpp  external_signer.cpp  fees.cpp  mining.h  (+21 more)
(+737 files in other folders)
