dist_man1_MANS=

if BUILD_BITCOINIID
  dist_man1_MANS+=bitcoinIId.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoincashII-qt.1
endif

if BUILD_BITCOINII_CLI
  dist_man1_MANS+=bitcoinII-cli.1
endif

if BUILD_BITCOINII_TX
  dist_man1_MANS+=bitcoinII-tx.1
endif

if BUILD_BITCOINII_UTIL
  dist_man1_MANS+=bitcoinII-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINII_WALLET
  dist_man1_MANS+=bitcoinII-wallet.1
endif
endif
